--- a/1_initial_notebooks/Data exploration.ipynb
+++ b/1_initial_notebooks/Data exploration.ipynb
@@ -439,6 +439,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>purchases</th>\n",
+       "      <th>unique_invoices</th>\n",
+       "      <th>unique_streams</th>\n",
+       "      <th>total_views</th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-11-28</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>97</td>\n",
+       "      <td>40.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-04</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-05</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-15</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>40</td>\n",
+       "      <td>6.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-11</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>144</td>\n",
+       "      <td>27.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-06-17</th>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>51</td>\n",
+       "      <td>42.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-05</th>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>400</td>\n",
+       "      <td>167.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-11</th>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>152</td>\n",
+       "      <td>51.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-25</th>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2</td>\n",
+       "      <td>114</td>\n",
+       "      <td>277</td>\n",
+       "      <td>407.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-20</th>\n",
+       "      <td>West Indies</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>313</td>\n",
+       "      <td>122.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2534 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                country  purchases  unique_invoices  unique_streams  \\\n",
+       "date                                                                  \n",
+       "2017-11-28    Australia         18                2               9   \n",
+       "2017-12-04    Australia          2                1               2   \n",
+       "2017-12-05    Australia          2                1               2   \n",
+       "2017-12-15    Australia          5                1               5   \n",
+       "2018-02-11    Australia         15                1              15   \n",
+       "...                 ...        ...              ...             ...   \n",
+       "2019-06-17  Unspecified          9                1               9   \n",
+       "2019-07-05  Unspecified          0                1              70   \n",
+       "2019-07-11  Unspecified         15                1              15   \n",
+       "2019-07-25  Unspecified        134                2             114   \n",
+       "2018-08-20  West Indies         54                1              49   \n",
+       "\n",
+       "            total_views  revenue  \n",
+       "date                              \n",
+       "2017-11-28           97    40.40  \n",
+       "2017-12-04            4    10.10  \n",
+       "2017-12-05            5     2.50  \n",
+       "2017-12-15           40     6.65  \n",
+       "2018-02-11          144    27.75  \n",
+       "...                 ...      ...  \n",
+       "2019-06-17           51    42.10  \n",
+       "2019-07-05          400   167.97  \n",
+       "2019-07-11          152    51.91  \n",
+       "2019-07-25          277   407.17  \n",
+       "2018-08-20          313   122.77  \n",
+       "\n",
+       "[2534 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summ_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
